# Clips

./: .editorconfig  CMakeLists.txt  LICENSE  README.md  README.txt  exports.def
Headers/: bitclip.h  boxclip.h  linclip.h  memclip.h  msvclip.h  oclclip.h  penclip.c  penclip.h  priclip.h  queclip.h  staclip.h  timclip.h
Kernels/: bitclip.cl  bitclip_c.cl  bitclip_h.cl  linclip.cl  ouoclip.cl
Mains/: builder.c  prime.c  sorting.c
Sources/: bitclip.c  bitclip.cl  bitcros.c  bitcrux.c  boxclip.c  linclip.c  linclip.cl  lincros.c  lincrux.c  memclip.c  oclclip.c  oclcrux.c  penclip.c  priclip.c  pricrux.c  queclip.c  staclip.c  timclip.c
